# translation-service-c

./: CMakeLists.txt  README.md  main.c  ts.c
